<resources>
    <string name="app_name">In and Out</string>
    <string name="place_an_order_header">Place an Order</string>
    <string name="double_double">Double Double</string>
    <string name="cheeseburger">Cheeseburger</string>
    <string name="french_fries">French Fries</string>
    <string name="shakes">Shakes</string>
    <string name="fountain_drinks_pick_size">Fountain Drinks (pick size)</string>
    <string name="small_drink">Small</string>
    <string name="medium_drink">Medium</string>
    <string name="large_drink">Large</string>
    <string name="place_order_button_text">Place Order</string>
    <string name="start_new_order_button_text">Start New Order</string>
</resources>
